# idontwant_toopen_insta

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCH.md  Dockerfile  README.md  alembic.ini  clean.sh  docker-compose.dev.override.yaml  docker-compose.pg-test.override.yaml  docker-compose.prod.override.yaml  docker-compose.yaml  docker_entrypoint.sh  mypy.ini  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml  docker-build-check.yml  docker.yml  pr-title.yml  quality.yml
docker/: Dockerfile.app  __init__.py  clean.sh  compose.dev.yaml  compose.pg-test.yaml  compose.prod.yaml  compose.yaml  entrypoint.sh  preflight.sh
docker/scripts/: __init__.py  create_transfer_fixture.py  postgres_bootstrap.py  sqlite_to_postgres.py  test_sqlite_to_postgres.sh
docs/: agent-workflow.md  database.md  git-flow.md
docs/bugs/: caption-truncation-2026-07-09.md
ig_reel_downloader/: __init__.py  __main__.py  app.py  constants.py  judgmental.py  media_fetch.py  telegram_renderer.py  utils.py
ig_reel_downloader/downloaders/: __init__.py  base.py  instagram.py  registry.py  tiktok.py  youtube.py  yt_dlp_support.py
ig_reel_downloader/repository/: __init__.py  base.py  models.py  orm.py  postgres.py  schema.py  sqlite.py
migrations/: env.py
migrations/versions/: 20260707_0001_create_reels_table.py  20260707_0002_create_generic_media_tables.py  20260710_0003_create_judgmental_animations_table.py  20260715_0004_widen_file_size_bytes.py
scripts/: create_transfer_fixture.py  deploy.sh  postgres_runtime_probe.py  preflight.sh  sqlite_to_postgres.py  test_sqlite_to_postgres.sh
tests/: test_utils.py
tests/integration/repository/: test_migrations.py  test_postgres_repository.py  test_sqlite_repository.py  test_sqlite_to_postgres.py
tests/unit/: test_app.py  test_downloader_registry.py  test_instagram_downloader.py  test_judgmental.py  test_main.py  test_media_fetch.py  test_media_models.py  test_telegram_renderer.py  test_tiktok_downloader.py  test_utils.py  test_youtube_downloader.py  test_ytdlp_support.py
