[project]
name = "ig-reel-downloader"
version = "0.1.0"
description = ""
authors = [
    {name = "Jarki",email = "yaroslav.ivashko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2025.6.9,<2027.0.0",
    "python-telegram-bot>=22.1,<23.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.17,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
# Testing
test = "pytest"
test-cov = "pytest --cov=ig_reel_downloader --cov-report=term-missing --cov-report=html"

# Linting and formatting
lint = "ruff check ."
lint-fix = "ruff check --fix ."
format = "ruff format ."
format-check = "ruff format --check ."

# Type checking
typecheck = "mypy ig_reel_downloader"

# Agent pre-handoff gate: auto-fixes then validates (continues on failure so devs see all results)
verify = {sequence = ["format", "lint-fix", "typecheck", "test"], ignore_fail = "return_non_zero"}
# CI gate: read-only check, no mutations
check = ["format-check", "lint", "typecheck", "test"]

# Database migrations
db-upgrade = "alembic upgrade head"
db-downgrade = "alembic downgrade -1"
db-current = "alembic current"
db-history = "alembic history"
db-revision = "alembic revision --autogenerate -m"

# Run the bot
bot = "python -m ig_reel_downloader"

# Trigger the Pi dev deployment via workflow_dispatch.
# Agents must not run this task unless the user explicitly asks for a deployment.
deploy = {shell = """
  set -euo pipefail
  echo "Triggering dev deployment from $workflow_ref (image: $image_tag, compose: $compose_ref)..."
  gh workflow run deploy-dev.yml --ref "$workflow_ref" -f image_tag="$image_tag" -f compose_ref="$compose_ref"
""", args = {image_tag = {default = "latest", help = "GHCR image tag to deploy"}, compose_ref = {default = "main", help = "Git ref to curl Compose files from"}, workflow_ref = {default = "main", help = "Git ref containing deploy-dev.yml"}}}

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "poethepoet>=0.38.0",
    "ruff>=0.14.7",
    "types-yt-dlp>=2025.12.8.20251210",
]
test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
